# jpReader

./: CMakeLists.txt  CaptureWindow.cpp  CaptureWindow.h  LeftTopBar.cpp  LeftTopBar.h  RightBar.cpp  RightBar.h  SubStringButton.cpp  SubStringButton.h  TopBar.cpp  TopBar.h  TranslationRequestHandler.cpp  TranslationRequestHandler.h  keyBinds.cpp  keyBinds.h  main.cpp  mainwindow.cpp  mainwindow.h  pyScripts.cpp  pyScripts.h
anki/: CMakeLists.txt  ankiclient.cpp  ankiclient.h  glossarybuilder.cpp
audio/: CMakeLists.txt
definition/: CMakeLists.txt  definitionwidget.cpp  definitionwidget.h  glossarylabel.cpp  glossarylabel.h  glossarywidget.cpp  glossarywidget.h  kanjiwidget.cpp  kanjiwidget.h  pitchwidget.h  tagwidget.h  termwidget.cpp  termwidget.h
dict/: databasemanager.cpp  dictionary.cpp
gui/widgets/common/: CMakeLists.txt
gui/widgets/settings/: CMakeLists.txt  ankisettings.cpp  ankisettingshelp.cpp  audiosourcesettings.cpp  dictionarysettings.cpp  optionswindow.cpp
mywidgets/: CMakeLists.txt  FuriganaCreatorPopup.cpp  FuriganaCreatorPopup.h  OverlayWidget.cpp  OverlayWidget.h  TextHolder.cpp  TextHolder.h  TranslationHolder.cpp  TranslationHolder.h
util/: CMakeLists.txt  constants.h  globalmediator.cpp  globalmediator.h  utils.cpp  utils.h
